@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.5 ]---------------
 
+2005-08-24  Erik Grinaker <erikg@codepoet.no>
+
+	* added GPass 0.5.x export
+
 2005-08-23  Erik Grinaker <erikg@codepoet.no>
 
 	* more informative error messages for gnomemisc module
